new-dotnet-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapp-service
spec:
  selector:
    app: clarity-cloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
